<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.xuzhi.easykitchen.StartActivityFragment"
    android:orientation="vertical"
    android:background="@drawable/start_background">

    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity = "center"
        android:textSize="50sp"
        android:textStyle="bold"
        android:typeface="monospace"
        android:textColor="@color/lightskyblue"
        android:alpha="0.9"/>


    <TextView android:text="@string/breakfast" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:background="@drawable/start_border"
        android:layout_marginTop="40sp"
        android:id = "@+id/id_breakfast"
        android:alpha="0.8"/>

    <TextView android:text="@string/lunch" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:background="@drawable/start_border"
        android:layout_marginTop="20sp"
        android:id = "@+id/id_lunch"
        android:alpha="0.8"/>

    <TextView android:text="@string/supper" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:background="@drawable/start_border"
        android:layout_marginTop="20sp"
        android:id = "@+id/id_supper"
        android:alpha="0.8"/>

    <TextView android:text="@string/myKitchen" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity = "center"
        android:background="@drawable/start1_border"
        android:layout_marginTop="40sp"
        android:id = "@+id/id_my_kitchen"
        android:alpha="0.8"/>

</LinearLayout>
