<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.xuzhi.easykitchen.BrowseRecipeActivityFragment"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_tab_contacts_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:orientation="horizontal"
        android:background="@color/lightgray">
        <TextView
            android:id="@+id/timeConsuming"
            android:text="@string/browse_recipes_timeConsuming"
            android:layout_height="wrap_content"
            android:layout_width= "0dip"
            android:background="@color/lightgray"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_weight = "1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/difficulty"
            android:text="@string/browse_recipes_difficulty"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_centerHorizontal="true"
            android:background="@color/lightgray"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_weight = "1"
            android:gravity="center"/>
        <TextView
            android:id="@+id/popularity"
            android:text="@string/browse_recipes_popularity"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/lightgray"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:layout_weight = "1"
            android:gravity="center"/>
    </LinearLayout>
    <ListView
        android:id="@+id/browse_recipes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>

</LinearLayout>
