<?xml version="1.0" encoding="utf-8"?>
<com.example.xuzhi.easykitchen.MyScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
        android:orientation="vertical">

        <TextView android:text="@string/vegetable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:background="@color/grey"/>

        <com.example.xuzhi.easykitchen.MaterialGridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grid_view_vegetable"
            android:columnWidth="90dp"
            android:numColumns="4"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:minWidth="45dp"
            android:visibility="visible">
        </com.example.xuzhi.easykitchen.MaterialGridView>

        <TextView android:text="@string/meat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/grey"/>

        <com.example.xuzhi.easykitchen.MaterialGridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grid_view_meat"
            android:columnWidth="90dp"
            android:numColumns="4"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:minWidth="45dp"
            android:visibility="visible">
    </com.example.xuzhi.easykitchen.MaterialGridView>

          <TextView android:text="@string/seasoning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@color/grey"/>

        <com.example.xuzhi.easykitchen.MaterialGridView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/grid_view_seasoning"
            android:columnWidth="90dp"
            android:numColumns="4"
            android:verticalSpacing="0dp"
            android:horizontalSpacing="0dp"
            android:stretchMode="columnWidth"
            android:gravity="center"
            android:minWidth="45dp"
            android:visibility="visible">
        </com.example.xuzhi.easykitchen.MaterialGridView>
    </LinearLayout>
</com.example.xuzhi.easykitchen.MyScrollView>